2015-11-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18f18855.inc, header/p18f18875.inc, header/p18lf18855.inc,
    header/p18lf18875.inc:
    Added the missing DEBUG config option to these MCUs.

2015-11-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcofflink.c:
    Fixed a bug which is related to this support request:
        "#9 Trouble for interpreting GPLINK warning"
    Thanks to Philippe Paternotte.

  * libgputils/gpreadobj.c:
    Fixed an another possible bug.

  * Other copyright and format changes.

2015-09-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/evaluate.c:
    Supplement to the handling of PIC14EX type.

2015-09-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm.c:
    Changed the explanations of some options.

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gplink/gplink.c, gputils/gplib.c, gputils/gpstrip.c,
    gputils/gpvo.c, libgputils/gpreadobj.c, libgputils/gpreadobj.h:
    Changed the members name of enum gp_coff_type.

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpdasm.c:
    Explicity initialize the members of gpdasm_state structure.
    The unexpand() correctly handle the newline characters.
    Renamed the ux_println() to ux_print().
    The ux_print() got a new parameter: "newline"
    Changed the use of ux_print().

  * gputils/gplib.c:
    Explicity initialize the members of gplib_state structure.

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f1xxx.inc:
    Changed to the gpasm specific version.

  * header/p18cxxx.inc:
    Added an gpasm specific example and the __18CXX section.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/*, lkr/*, man/gpasm.1.in:
    Updated based on the mplabx-3.10, part 2.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>